--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p class="profile-link" style="margin: 17.33px 0;"><a href="http://www.ouc.edu.cn"
                         target="blank">中国海洋大学</a></p>
                 <p class="profile-link" style="margin: 17.33px 0;">Email: hongfeng at ouc dot edu dot cn</a></p>
-                <p class="profile-link" style="margin: 17.33px 0;">Office: 青岛市松岭路238号信息科学与工程学部南楼B517</a></p>
+                <p class="profile-link" style="margin: 17.33px 0;">Office: 青岛市黄岛区三沙路1299号信息南楼A511室</a></p>
                 <h1></h1>
 
             </div>
@@ -126,10 +126,10 @@
             <div class="title">基本信息</div>
             <hr>
 
-            <p style="font-size: 16.4px;">洪锋，教授、博导、博士，国际计算机学会应用计算委员会秘书长、CCF分布式计算与系统专委会执行委员、国际学术期刊Sensors主题编委、IEEE
-                1851国际标准工作组成员；
-                长期从事物联网智能感知和轨迹大数据挖掘研究。先后主持国家自然科学基金面上项目2项、青年项目；并参与国家重点研发计划、973计划、863计划等10余项国家级课题研究。
-                在包括ACM Computing Survey、CHI、INFOCOM等国际学术期刊和国际会议发表学术论文80余篇。
+            <p style="font-size: 16.4px;">洪锋，教授、博导、博士，国际计算机学会中国应用计算委员会秘书长、CCF分布式计算与系统专委会执行委员、国际学术期刊Sensors主题编委、IEEE
+                1851、2735国际标准工作组成员；
+                长期从事物联网智能感知和轨迹大数据挖掘研究。先后主持国家自然科学基金面上项目2项、青年项目1项；并参与国家重点研发计划、973计划、863计划等10余项国家级课题研究。
+                在包括ACM Computing Survey、Ocean Engineering、Ubicomp、CHI、INFOCOM、Sensys、等国际学术期刊和国际会议发表学术论文80余篇。
             </p>
 
 
@@ -271,15 +271,27 @@
                     Household Appliances，2012
                 </li>
                 <li>
+                    国际标准，2402-2017 - IEEE Standard Design Criteria of Complex Virtual Instruments for Ocean Observation，2017
+                </li>
+                <li>
+                    国际标准，2735-2022 - IEEE Standard for Interoperability of Complex Virtual Instruments for Internet of Things，2022
+                </li>
+                 <li>
+                    国际标准，1851-2023 - IEEE Standard for Design Criteria of Integrated Sensor-Based Test Applications for
+                    Household Appliances，2023
+                </li>
+                <li>
                     中国标准，基于传感器的产品检测软件集成接口规范，GB/T 33137-2016，中华人民共和国国家质量监督检验检疫总局，2016.10.13
                 </li>
             </ol>
             <p style="margin: 16px 0;"> 专利</p>
             <ol style="padding-left: 40px;list-style-type: auto;">
-                <li>国家发明专利：一种基于内嵌三位加速计的手持设备的身份认证方法，专利号：ZL 2015 1 0153477.8；第一位</li>
-                <li>国家发明专利：基于智能手机的室内行人定位与跟踪方法，专利号：ZL 2014 1 0438531.0；第一位</li>
-                <li>国家发明专利：基于触摸行为的智能手机使用情境识别方法；专利号：ZL 2020 1 0938901.0；第一位</li>
-                <li>国家发明专利：复用基站蜂窝信号的用户识别和计数方法；专利号：ZL 2020 1 0598922.2；第一位</li>
+                 <li>国家发明专利：基于捕捞时序关系的短时捕捞努力量分布预测方法；专利号：ZL 2021 1 0627654.7；第一位</li>
+                 <li>国家发明专利：复用基站蜂窝信号的用户识别和计数方法；专利号：ZL 2020 1 0598922.2；第一位</li>
+                 <li>国家发明专利：基于触摸行为的智能手机使用情境识别方法；专利号：ZL 2020 1 0938901.0；第一位</li>
+                 <li>国家发明专利：一种基于内嵌三位加速计的手持设备的身份认证方法，专利号：ZL 2015 1 0153477.8；第一位</li>
+                 <li>国家发明专利：基于智能手机的室内行人定位与跟踪方法，专利号：ZL 2014 1 0438531.0；第一位</li>            
+               
             </ol>
             <p style="margin: 16px 0;"> 获奖</p>
             <ol style="padding-left: 40px;list-style-type: auto;">
