--- a/index.html
+++ b/index.html
@@ -311,6 +311,15 @@
             <hr>
         </div>
 
+        <div class="title" style="float:middle">基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具</div>
+        <hr>
+        <div id="cell1" style="width:50%;float:left">
+            <a href="https://www.bilibili.com/video/BV1Z14y1c7pi/">
+                <img src="./data/cellEye.webp" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
+            </a>
+            <p style=" text-align:middle">基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具</p>
+        </div>
+
         <div class="title" style="float:middle">复用基站蜂窝信号的智能感知</div>
         <hr>
 
