--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 
         <div class="title" style="float:middle">基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具</div>
         <hr>
-        <div id="cell1" style="width:50%;float:left">
+        <div id="cell1" style="width:50%;float:middle">
             <a href="https://www.bilibili.com/video/BV1Z14y1c7pi/">
                 <img src="./data/cellEye.webp" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
             </a>
