--- a/index.html
+++ b/index.html
@@ -310,12 +310,21 @@
             <div class="title">科研成果示例</div>
             <hr>
         </div>
+        <div class="title" style="float:middle">基于内嵌三位加速计的手持设备的身份认证</div>
+        <hr>
+
+        <div id="left" style="width:50%;float:left;">
+            <a href="https://www.bilibili.com/video/BV1oB4y1K7K5/">
+                <img src="./data/wavingAuthSenario.webp" width=95% alt="基于内嵌三位加速计的手持设备的身份认证演示视频" />
+                <p style=" text-align:center;">应用场景演示视频</p>
+            </a>
+        </div>
 
         <div class="title" style="float:middle">基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具</div>
         <hr>
-        <div id="cell1" style="width:50%;float:middle">
+        <div id="cell1" style="width:50%;float:left">
             <a href="https://www.bilibili.com/video/BV1Z14y1c7pi/">
-                <img src="./data/cellEye.webp" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
+                <img src="./data/Toothfairy.webp" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
             </a>
             <p style=" text-align:middle">基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具</p>
         </div>
