--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <hr>
         <div id="cell1" style="width:50%;float:left">
             <a href="https://www.bilibili.com/video/BV1Z14y1c7pi/">
-                <img src="./data/Toothfairy.webp" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
+                <img src="./data/ToothfairyCover.jpg" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
             </a>
             <p style=" text-align:middle">基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具</p>
         </div>
