--- a/index.html
+++ b/index.html
@@ -309,8 +309,7 @@
         <div class="row">
             <div class="title">科研成果示例</div>
             <hr>
-        </div>
-        
+        </div>        
 
         <div class="title" style="float:middle">复用基站蜂窝信号的智能感知</div>
         <hr>
@@ -321,7 +320,6 @@
             </a>
             <p style=" text-align:middle">复用基站蜂窝信号的人员进出识别和计数</p>
         </div>
-
 
         <div id="cell2" style="width:50%;float:right;">
             <a href="https://www.bilibili.com/video/BV15p4y1S7As/">
@@ -335,7 +333,7 @@
         <hr>
         <div id="cell1" style="width:50%;float:left">
             <a href="https://www.bilibili.com/video/BV1Z14y1c7pi/">
-                <img src="./data/ToothfairyCover.jpg" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
+                <img src="./data/ToothFairyCover.jpg" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
             </a>
             <p style=" text-align:middle">基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具</p>
         </div>
