--- a/index.html
+++ b/index.html
@@ -333,10 +333,11 @@
         <hr>
         <div id="cell1" style="width:50%;float:left">
             <a href="https://www.bilibili.com/video/BV1Z14y1c7pi/">
-                <img src="./data/ToothFairyCover.jpg" style="width:100%;float:left;" alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
+                <img src="./data/ToothFairyCover.jpg" width=100% alt="基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具" />
                 <p style=" text-align:center;">应用场景演示视频</p>
             </a>
         </div>
+         <div></div>
 
         <div class="title" style="float:middle">基于触摸行为的智能手机使用情境识别</div>
         <hr>
