--- a/index.html
+++ b/index.html
@@ -327,7 +327,10 @@
             </a>
             <p style=" text-align:right;">复用基站蜂窝信号的健身动作识别和计数</p>
         </div>
-        <div></div>
+        
+        <div>
+            <hr>
+        </div>
 
         <div class="title" style="float:middle">基于耳机逆向声传播的逐颗牙齿的刷牙计时辅助工具</div>
         <hr>
