--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
             </a>
         </div>
 
-        <div class="title" style="float:middle">复用基站蜂窝信号的智能感知</div>
+        <div class="title" style="float:middle">复用基站蜂窝信号的智能感知技术</div>
         <hr>
         <div id="cell1" style="width:50%;float:left">
             <a href="https://www.bilibili.com/video/BV1V44y1z7zg/">
