--- a/index.html
+++ b/index.html
@@ -474,18 +474,22 @@
                                                                         <td style="word-break:break-all;" rowspan="1"
                                                                             colspan="1" border="0" width="171"
                                                                             valign="null">
-                                                                            <p><img style="float:none;"
+                                                                            <p>
+                                                                               <a href="https://yanniyang-polyu.github.io/">
+                                                                                <img style="float:none;"
                                                                                     src="People_files/9a584699-fc81-40b4-ace9-73633baf19ea.jpg"
                                                                                     original_name="2b684b0b06d5faf114ee89d4f82380b.jpg"
                                                                                     original_src="/_upload/article/images/c5/ee/74cb3b3b4d29a53f4a08da32eaa6/9a584699-fc81-40b4-ace9-73633baf19ea_d.jpg"
                                                                                     original-src="/_upload/article/images/c5/ee/74cb3b3b4d29a53f4a08da32eaa6/b4e61724-305e-4a4e-9668-f588ba431a4e_d.jpg"
                                                                                     data-layer="photo"
-                                                                                    sudyfile-attr="{'title':'2b684b0b06d5faf114ee89d4f82380b.jpg'}">
+                                                                                    sudyfile-attr="{'title':'2b684b0b06d5faf114ee89d4f82380b.jpg'}"
+                                                                                    >
+                                                                               </a>
                                                                             </p>
                                                                             <h1
                                                                                 style="background-color:#ffffff;box-sizing:border-box;font-size:2.2rem;margin:0px 0px 0.5rem;font-family:adobe-caslon-pro, georgia, times new roman, serif;font-weight:500;line-height:1.2;color:#333333;opacity:1;text-align:center;">
                                                                                 <span style="font-size:16px;">2014 Yanni
-                                                                                    Yang</span></h1>
+                                                                                  Yang</span></h1>
                                                                         </td>
                                                                         <td style="word-break:break-all;" rowspan="1"
                                                                             colspan="1" border="0" width="171"
