--- a/index.html
+++ b/index.html
@@ -469,6 +469,18 @@
             <a href="https://www.sciencedirect.com/science/article/pii/S0029801823029724" target="_blank" style="width:100%;">Zhongning Zhao; Jiaxuan Chen; Yuqi Shi; Feng Hong*; Guiyuan Jiang; Haiguang Huang; Jinhua Zhao; HiTrip: Historical trajectory interpolation for trawlers via deep learning on multi-source data, Ocean Engineering, 2024, 292(116588). SCIE, EI.</a>
         </div>
 
+        <div class="title" style="clear: both;">HyFish：基于VMS和融合水文要素的捕捞努力分布预测</div>
+        <hr>
+        <div id="left" style="width:50%;float:left;">
+            <img src="data\Trajectory\HyFish.png" width=95% alt="捕捞努力量分布序列预测每周平均预测误差对比" />
+            <p style=" text-align:center;">捕捞努力量分布序列预测每周平均预测误差对比</p>
+        </div>
+        <div id="right" style="width:50%;float:right;">
+            <p style="width:100%;float:right;">在定量化分析海洋水文要素场序列对捕捞努力量分布序列的影响的前提下，本研究提出融合海洋水文要素场的海洋捕捞努力量分布预测模型HyFish。<br>图示为将HyFish在整个预测期内的每周预测结果的平均RMSE值与现有典型工作进行对比。HyFish在测试期内的所有周均取得最低的平均RMSE，证明HyFish在预测精度上优于已有工作。</p>
+            <br>
+            <a href="#1" style="width:100%;">Yuqi Shi, Feng Hong*, Zhongning Zhao, Yufei Jiang, Shutian Zhou and Haiguang Huang. HyFish: Hydrological Factor Fusion for Prediction of Fishing Effort Distribution with VMS dataset. Frontiers of Marine Science.</a>
+        </div>
+
         <div class="title" style="clear:both;text-align:center;">海洋大数据相关研究</div>
         <hr>
 
