--- a/index.html
+++ b/index.html
@@ -1210,17 +1210,6 @@
                                                                                     style="color:#333333;font-family:adobe-caslon-pro, georgia, times new roman, serif;font-size:16px;text-align:center;background-color:#ffffff;">2024
                                                                                     Jian Zhuang</span><br></p>
                                                                         </td>
-                                                                            <td rowspan="1" colspan="1" width="171">
-                                                                                <p><img data-layer="photo"
-                                                                                        src="People_files/2024_Qiance_Zang.jpg"
-                                                                                        original-src="/_upload/article/images/c5/ee/74cb3b3b4d29a53f4a08da32eaa6/4dd56aa9-4324-4da6-ad10-08b03de5eaaf_d.jpg"
-                                                                                        style="float:none;"
-                                                                                        sudyfile-attr="{'title':'臧千策.jpg'}">
-                                                                                </p>
-                                                                                <p style="text-align:center"><span
-                                                                                        style="color:#333333;font-family:adobe-caslon-pro, georgia, times new roman, serif;font-size:16px;text-align:center;background-color:#ffffff;">2024
-                                                                                        Qiance Zang</span><br></p>
-                                                                            </td>
                                                                         <td rowspan="1" colspan="1" width="171">
                                                                             <p><img data-layer="photo"
                                                                                     src="People_files/2024_Yuanqi_Gao.jpg"
@@ -1234,6 +1223,30 @@
                                                                         </td>
                                                                         <td rowspan="1" colspan="1" width="171">
                                                                             <p><img data-layer="photo"
+                                                                                    src="People_files/2024_Tiantian_He.jpg"
+                                                                                    original-src="/_upload/article/images/c5/ee/74cb3b3b4d29a53f4a08da32eaa6/4dd56aa9-4324-4da6-ad10-08b03de5eaaf_d.jpg"
+                                                                                    style="float:none;"
+                                                                                    sudyfile-attr="{'title':'何甜甜.jpg'}">
+                                                                            </p>
+                                                                            <p style="text-align:center"><span
+                                                                                    style="color:#333333;font-family:adobe-caslon-pro, georgia, times new roman, serif;font-size:16px;text-align:center;background-color:#ffffff;">2024
+                                                                                    Yuanqi Gao</span><br></p>
+                                                                        </td>
+                                                                        <td rowspan="1" colspan="1" width="171">
+                                                                            <p><img data-layer="photo"
+                                                                                    src="People_files/2024_Qiance_Zang.jpg"
+                                                                                    original-src="/_upload/article/images/c5/ee/74cb3b3b4d29a53f4a08da32eaa6/4dd56aa9-4324-4da6-ad10-08b03de5eaaf_d.jpg"
+                                                                                    style="float:none;"
+                                                                                    sudyfile-attr="{'title':'臧千策.jpg'}">
+                                                                            </p>
+                                                                            <p style="text-align:center"><span
+                                                                                    style="color:#333333;font-family:adobe-caslon-pro, georgia, times new roman, serif;font-size:16px;text-align:center;background-color:#ffffff;">2024
+                                                                                    Qiance Zang</span><br></p>
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <td rowspan="1" colspan="1" width="171">
+                                                                            <p><img data-layer="photo"
                                                                                     src="People_files/2024_Tianyi_Zhang.jpg"
                                                                                     original-src="/_upload/article/images/c5/ee/74cb3b3b4d29a53f4a08da32eaa6/4dd56aa9-4324-4da6-ad10-08b03de5eaaf_d.jpg"
                                                                                     style="float:none;"
@@ -1243,8 +1256,6 @@
                                                                                     style="color:#333333;font-family:adobe-caslon-pro, georgia, times new roman, serif;font-size:16px;text-align:center;background-color:#ffffff;">2024
                                                                                     Tianyi Zhang</span><br></p>
                                                                         </td>
-                                                                    </tr>
-                                                                    <tr>
                                                                         <td rowspan="1" colspan="1" width="171">
                                                                             <p><img data-layer="photo"
                                                                                     src="People_files/2024_Jiangtao_Zhao.jpg"
