--- a/index.html
+++ b/index.html
@@ -1230,7 +1230,7 @@
                                                                             </p>
                                                                             <p style="text-align:center"><span
                                                                                     style="color:#333333;font-family:adobe-caslon-pro, georgia, times new roman, serif;font-size:16px;text-align:center;background-color:#ffffff;">2024
-                                                                                    Yuanqi Gao</span><br></p>
+                                                                                    Tiantian He</span><br></p>
                                                                         </td>
                                                                         <td rowspan="1" colspan="1" width="171">
                                                                             <p><img data-layer="photo"
